--- a/English.lproj/PreferencesWindow.xib
+++ b/English.lproj/PreferencesWindow.xib
@@ -8,7 +8,7 @@
 		<string key="IBDocument.HIToolboxVersion">353.00</string>
 		<object class="NSMutableArray" key="IBDocument.EditedObjectIDs">
 			<bool key="EncodedWithXMLCoder">YES</bool>
-			<integer value="579"/>
+			<integer value="566"/>
 		</object>
 		<object class="NSArray" key="IBDocument.PluginDependencies">
 			<bool key="EncodedWithXMLCoder">YES</bool>
@@ -1156,7 +1156,7 @@
 								<object class="NSTabViewItem" id="973441672">
 									<string key="NSIdentifier">2</string>
 									<object class="NSView" key="NSView" id="551403130">
-										<reference key="NSNextResponder" ref="273179981"/>
+										<nil key="NSNextResponder"/>
 										<int key="NSvFlags">256</int>
 										<object class="NSMutableArray" key="NSSubviews">
 											<bool key="EncodedWithXMLCoder">YES</bool>
@@ -39441,29 +39441,6 @@ A</bytes>
 															<object class="NSTextView" id="663230633">
 																<reference key="NSNextResponder" ref="38319829"/>
 																<int key="NSvFlags">2322</int>
-																<object class="NSMutableSet" key="NSDragTypes">
-																	<bool key="EncodedWithXMLCoder">YES</bool>
-																	<object class="NSMutableArray" key="set.sortedObjects">
-																		<bool key="EncodedWithXMLCoder">YES</bool>
-																		<string>Apple HTML pasteboard type</string>
-																		<string>Apple PDF pasteboard type</string>
-																		<string>Apple PICT pasteboard type</string>
-																		<string>Apple PNG pasteboard type</string>
-																		<string>Apple URL pasteboard type</string>
-																		<string>CorePasteboardFlavorType 0x6D6F6F76</string>
-																		<string>CorePasteboardFlavorType 0x75726C20</string>
-																		<string>NSColor pasteboard type</string>
-																		<string>NSFilenamesPboardType</string>
-																		<string>NSStringPboardType</string>
-																		<string>NeXT Encapsulated PostScript v1.2 pasteboard type</string>
-																		<string>NeXT RTFD pasteboard type</string>
-																		<string>NeXT Rich Text Format v1.0 pasteboard type</string>
-																		<string>NeXT TIFF v4.0 pasteboard type</string>
-																		<string>NeXT font pasteboard type</string>
-																		<string>NeXT ruler pasteboard type</string>
-																		<string>WebURLsWithTitlesPboardType</string>
-																	</object>
-																</object>
 																<string key="NSFrameSize">{227, 14}</string>
 																<reference key="NSSuperview" ref="38319829"/>
 																<object class="NSTextContainer" key="NSTextContainer" id="1020095896">
@@ -39610,29 +39587,6 @@ A</bytes>
 															<object class="NSTextView" id="640938877">
 																<reference key="NSNextResponder" ref="672050781"/>
 																<int key="NSvFlags">2322</int>
-																<object class="NSMutableSet" key="NSDragTypes">
-																	<bool key="EncodedWithXMLCoder">YES</bool>
-																	<object class="NSMutableArray" key="set.sortedObjects">
-																		<bool key="EncodedWithXMLCoder">YES</bool>
-																		<string>Apple HTML pasteboard type</string>
-																		<string>Apple PDF pasteboard type</string>
-																		<string>Apple PICT pasteboard type</string>
-																		<string>Apple PNG pasteboard type</string>
-																		<string>Apple URL pasteboard type</string>
-																		<string>CorePasteboardFlavorType 0x6D6F6F76</string>
-																		<string>CorePasteboardFlavorType 0x75726C20</string>
-																		<string>NSColor pasteboard type</string>
-																		<string>NSFilenamesPboardType</string>
-																		<string>NSStringPboardType</string>
-																		<string>NeXT Encapsulated PostScript v1.2 pasteboard type</string>
-																		<string>NeXT RTFD pasteboard type</string>
-																		<string>NeXT Rich Text Format v1.0 pasteboard type</string>
-																		<string>NeXT TIFF v4.0 pasteboard type</string>
-																		<string>NeXT font pasteboard type</string>
-																		<string>NeXT ruler pasteboard type</string>
-																		<string>WebURLsWithTitlesPboardType</string>
-																	</object>
-																</object>
 																<string key="NSFrameSize">{227, 14}</string>
 																<reference key="NSSuperview" ref="672050781"/>
 																<object class="NSTextContainer" key="NSTextContainer" id="621348224">
@@ -39734,7 +39688,6 @@ A</bytes>
 											</object>
 										</object>
 										<string key="NSFrame">{{10, 33}, {478, 199}}</string>
-										<reference key="NSSuperview" ref="273179981"/>
 									</object>
 									<string key="NSLabel">Naming</string>
 									<reference key="NSColor" ref="70233803"/>
@@ -39743,7 +39696,7 @@ A</bytes>
 								<object class="NSTabViewItem" id="71180442">
 									<string key="NSIdentifier">Item 2</string>
 									<object class="NSView" key="NSView" id="137528334">
-										<nil key="NSNextResponder"/>
+										<reference key="NSNextResponder" ref="273179981"/>
 										<int key="NSvFlags">256</int>
 										<object class="NSMutableArray" key="NSSubviews">
 											<bool key="EncodedWithXMLCoder">YES</bool>
@@ -40001,20 +39954,21 @@ A</bytes>
 											</object>
 										</object>
 										<string key="NSFrame">{{10, 33}, {478, 199}}</string>
+										<reference key="NSSuperview" ref="273179981"/>
 									</object>
 									<string key="NSLabel">Tags</string>
 									<reference key="NSColor" ref="70233803"/>
 									<reference key="NSTabView" ref="273179981"/>
 								</object>
 							</object>
-							<reference key="NSSelectedTabViewItem" ref="973441672"/>
+							<reference key="NSSelectedTabViewItem" ref="71180442"/>
 							<reference key="NSFont" ref="58393568"/>
 							<int key="NSTvFlags">0</int>
 							<bool key="NSAllowTruncatedLabels">YES</bool>
 							<bool key="NSDrawsBackground">YES</bool>
 							<object class="NSMutableArray" key="NSSubviews">
 								<bool key="EncodedWithXMLCoder">YES</bool>
-								<reference ref="551403130"/>
+								<reference ref="137528334"/>
 							</object>
 						</object>
 					</object>
@@ -40030,6 +39984,9 @@ A</bytes>
 			</object>
 			<object class="NSCustomObject" id="826778956">
 				<string key="NSClassName">NSNumberFormatter</string>
+			</object>
+			<object class="NSCustomObject" id="15505171">
+				<string key="NSClassName">Preferences</string>
 			</object>
 		</object>
 		<object class="IBObjectContainer" key="IBDocument.Objects">
@@ -40070,10 +40027,22 @@ A</bytes>
 							<string key="NSLabel">value: values.TargetFolder</string>
 							<string key="NSBinding">value</string>
 							<string key="NSKeyPath">values.TargetFolder</string>
+							<object class="NSDictionary" key="NSOptions">
+								<string key="NS.key.0">NSValueTransformerName</string>
+								<string key="NS.object.0">NSURLTransformer</string>
+							</object>
 							<int key="NSNibBindingConnectorVersion">2</int>
 						</object>
 					</object>
-					<int key="connectionID">800</int>
+					<int key="connectionID">880</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">window</string>
+						<reference key="source" ref="15505171"/>
+						<reference key="destination" ref="686343431"/>
+					</object>
+					<int key="connectionID">886</int>
 				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -41209,6 +41178,11 @@ A</bytes>
 						<reference key="object" ref="658485692"/>
 						<reference key="parent" ref="318145309"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">885</int>
+						<reference key="object" ref="15505171"/>
+						<reference key="parent" ref="0"/>
+					</object>
 				</object>
 			</object>
 			<object class="NSMutableDictionary" key="flattenedProperties">
@@ -41381,15 +41355,16 @@ A</bytes>
 					<string>874.IBPluginDependency</string>
 					<string>875.IBPluginDependency</string>
 					<string>876.IBPluginDependency</string>
+					<string>885.IBPluginDependency</string>
 				</object>
 				<object class="NSMutableArray" key="dict.values">
 					<bool key="EncodedWithXMLCoder">YES</bool>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilderKit</string>
 					<string>com.apple.InterfaceBuilderKit</string>
-					<string>{{237, 300}, {524, 261}}</string>
+					<string>{{304, 326}, {524, 261}}</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
-					<string>{{237, 300}, {524, 261}}</string>
+					<string>{{304, 326}, {524, 261}}</string>
 					<reference ref="9"/>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -41554,6 +41529,7 @@ A</bytes>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 				</object>
 			</object>
 			<object class="NSMutableDictionary" key="unlocalizedProperties">
@@ -41576,9 +41552,25 @@ A</bytes>
 				</object>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">876</int>
+			<int key="maxID">886</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<bool key="EncodedWithXMLCoder">YES</bool>
+				<object class="IBPartialClassDescription">
+					<string key="className">Preferences</string>
+					<string key="superclassName">NSWindowController</string>
+					<object class="NSMutableDictionary" key="outlets">
+						<string key="NS.key.0">prefWindow</string>
+						<string key="NS.object.0">id</string>
+					</object>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">Preferences.py</string>
+					</object>
+				</object>
+			</object>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.LastKnownRelativeProjectPath">../Pyview.xcodeproj</string>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
