--- a/English.lproj/PreferencesWindow.xib
+++ b/English.lproj/PreferencesWindow.xib
@@ -18,7 +18,7 @@
 		<object class="NSMutableArray" key="IBDocument.RootObjects" id="185732139">
 			<bool key="EncodedWithXMLCoder">YES</bool>
 			<object class="NSCustomObject" id="549592664">
-				<string key="NSClassName">NSApplication</string>
+				<string key="NSClassName">Preferences</string>
 			</object>
 			<object class="NSCustomObject" id="555730425">
 				<string key="NSClassName">FirstResponder</string>
@@ -39985,9 +39985,6 @@ A</bytes>
 			<object class="NSCustomObject" id="826778956">
 				<string key="NSClassName">NSNumberFormatter</string>
 			</object>
-			<object class="NSCustomObject" id="15505171">
-				<string key="NSClassName">Preferences</string>
-			</object>
 		</object>
 		<object class="IBObjectContainer" key="IBDocument.Objects">
 			<object class="NSMutableArray" key="connectionRecords">
@@ -40039,10 +40036,18 @@ A</bytes>
 				<object class="IBConnectionRecord">
 					<object class="IBOutletConnection" key="connection">
 						<string key="label">window</string>
-						<reference key="source" ref="15505171"/>
+						<reference key="source" ref="549592664"/>
 						<reference key="destination" ref="686343431"/>
 					</object>
-					<int key="connectionID">886</int>
+					<int key="connectionID">887</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">delegate</string>
+						<reference key="source" ref="686343431"/>
+						<reference key="destination" ref="549592664"/>
+					</object>
+					<int key="connectionID">889</int>
 				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -41178,11 +41183,6 @@ A</bytes>
 						<reference key="object" ref="658485692"/>
 						<reference key="parent" ref="318145309"/>
 					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">885</int>
-						<reference key="object" ref="15505171"/>
-						<reference key="parent" ref="0"/>
-					</object>
 				</object>
 			</object>
 			<object class="NSMutableDictionary" key="flattenedProperties">
@@ -41355,16 +41355,15 @@ A</bytes>
 					<string>874.IBPluginDependency</string>
 					<string>875.IBPluginDependency</string>
 					<string>876.IBPluginDependency</string>
-					<string>885.IBPluginDependency</string>
 				</object>
 				<object class="NSMutableArray" key="dict.values">
 					<bool key="EncodedWithXMLCoder">YES</bool>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilderKit</string>
 					<string>com.apple.InterfaceBuilderKit</string>
-					<string>{{304, 326}, {524, 261}}</string>
+					<string>{{334, 359}, {524, 261}}</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
-					<string>{{304, 326}, {524, 261}}</string>
+					<string>{{334, 359}, {524, 261}}</string>
 					<reference ref="9"/>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -41529,7 +41528,6 @@ A</bytes>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
-					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 				</object>
 			</object>
 			<object class="NSMutableDictionary" key="unlocalizedProperties">
@@ -41552,7 +41550,7 @@ A</bytes>
 				</object>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">886</int>
+			<int key="maxID">889</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -41560,10 +41558,6 @@ A</bytes>
 				<object class="IBPartialClassDescription">
 					<string key="className">Preferences</string>
 					<string key="superclassName">NSWindowController</string>
-					<object class="NSMutableDictionary" key="outlets">
-						<string key="NS.key.0">prefWindow</string>
-						<string key="NS.object.0">id</string>
-					</object>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">Preferences.py</string>
