--- a/English.lproj/MainMenu.xib
+++ b/English.lproj/MainMenu.xib
@@ -8,8 +8,8 @@
 		<string key="IBDocument.HIToolboxVersion">353.00</string>
 		<object class="NSMutableArray" key="IBDocument.EditedObjectIDs">
 			<bool key="EncodedWithXMLCoder">YES</bool>
-			<integer value="29"/>
-			<integer value="372"/>
+			<integer value="371"/>
+			<integer value="296"/>
 		</object>
 		<object class="NSArray" key="IBDocument.PluginDependencies">
 			<bool key="EncodedWithXMLCoder">YES</bool>
@@ -1323,13 +1323,13 @@ AAAAAAAAAAAAAA</bytes>
 														<object class="NSOutlineView" id="809288042">
 															<reference key="NSNextResponder" ref="562655455"/>
 															<int key="NSvFlags">256</int>
-															<string key="NSFrameSize">{623, 79}</string>
+															<string key="NSFrameSize">{656, 79}</string>
 															<reference key="NSSuperview" ref="562655455"/>
 															<bool key="NSEnabled">YES</bool>
 															<object class="NSTableHeaderView" key="NSHeaderView" id="926419481">
 																<reference key="NSNextResponder" ref="247911839"/>
 																<int key="NSvFlags">256</int>
-																<string key="NSFrameSize">{623, 17}</string>
+																<string key="NSFrameSize">{656, 17}</string>
 																<reference key="NSSuperview" ref="247911839"/>
 																<reference key="NSTableView" ref="809288042"/>
 															</object>
@@ -1343,7 +1343,7 @@ AAAAAAAAAAAAAA</bytes>
 																<bool key="EncodedWithXMLCoder">YES</bool>
 																<object class="NSTableColumn" id="959278093">
 																	<string key="NSIdentifier">name</string>
-																	<double key="NSWidth">1.190000e+02</double>
+																	<double key="NSWidth">1.520000e+02</double>
 																	<double key="NSMinWidth">1.600000e+01</double>
 																	<double key="NSMaxWidth">1.000000e+03</double>
 																	<object class="NSTableHeaderCell" key="NSHeaderCell">
@@ -1468,14 +1468,14 @@ AAAAAAAAAAAAAA</bytes>
 																	<reference key="NSTableView" ref="809288042"/>
 																</object>
 																<object class="NSTableColumn" id="1001679766">
-																	<string key="NSIdentifier">comments</string>
+																	<string key="NSIdentifier">comment</string>
 																	<double key="NSWidth">1.810000e+02</double>
 																	<double key="NSMinWidth">1.000000e+01</double>
 																	<double key="NSMaxWidth">3.402823e+38</double>
 																	<object class="NSTableHeaderCell" key="NSHeaderCell">
 																		<int key="NSCellFlags">75628032</int>
 																		<int key="NSCellFlags2">0</int>
-																		<string key="NSContents">comments</string>
+																		<string key="NSContents">comment</string>
 																		<reference key="NSSupport" ref="26"/>
 																		<reference key="NSBackgroundColor" ref="890047747"/>
 																		<reference key="NSTextColor" ref="1027608368"/>
@@ -1516,6 +1516,7 @@ AAAAAAAAAAAAAA</bytes>
 														</object>
 													</object>
 													<string key="NSFrame">{{1, 17}, {623, 79}}</string>
+													<string key="NSBounds">{{33, 0}, {623, 79}}</string>
 													<reference key="NSSuperview" ref="464925201"/>
 													<reference key="NSNextKeyView" ref="809288042"/>
 													<reference key="NSDocView" ref="809288042"/>
@@ -1536,11 +1537,12 @@ AAAAAAAAAAAAAA</bytes>
 													<int key="NSvFlags">256</int>
 													<string key="NSFrame">{{1, 96}, {623, 15}}</string>
 													<reference key="NSSuperview" ref="464925201"/>
+													<bool key="NSEnabled">YES</bool>
 													<int key="NSsFlags">1</int>
 													<reference key="NSTarget" ref="464925201"/>
 													<string key="NSAction">_doScroller:</string>
 													<double key="NSCurValue">1.000000e+00</double>
-													<double key="NSPercent">9.983974e-01</double>
+													<double key="NSPercent">9.496951e-01</double>
 												</object>
 												<object class="NSClipView" id="247911839">
 													<reference key="NSNextResponder" ref="464925201"/>
@@ -1550,6 +1552,7 @@ AAAAAAAAAAAAAA</bytes>
 														<reference ref="926419481"/>
 													</object>
 													<string key="NSFrame">{{1, 0}, {623, 17}}</string>
+													<string key="NSBounds">{{33, 0}, {623, 17}}</string>
 													<reference key="NSSuperview" ref="464925201"/>
 													<reference key="NSNextKeyView" ref="926419481"/>
 													<reference key="NSDocView" ref="926419481"/>
@@ -1561,7 +1564,7 @@ AAAAAAAAAAAAAA</bytes>
 											<string key="NSFrameSize">{640, 112}</string>
 											<reference key="NSSuperview" ref="94896403"/>
 											<reference key="NSNextKeyView" ref="562655455"/>
-											<int key="NSsFlags">50</int>
+											<int key="NSsFlags">178</int>
 											<reference key="NSVScroller" ref="442461459"/>
 											<reference key="NSHScroller" ref="145276084"/>
 											<reference key="NSContentView" ref="562655455"/>
@@ -1693,7 +1696,6 @@ AAAAAAAAAAAAAA</bytes>
 									</object>
 									<string key="NSFrame">{{1, 1}, {261, 378}}</string>
 									<reference key="NSSuperview" ref="296989381"/>
-									<reference key="NSNextKeyView" ref="791541370"/>
 									<reference key="NSDocView" ref="791541370"/>
 									<reference key="NSBGColor" ref="501888658"/>
 									<object class="NSCursor" key="NSCursor">
@@ -1725,7 +1727,6 @@ AAAAAAAAAAAAAA</bytes>
 							</object>
 							<string key="NSFrame">{{-1, 20}, {278, 380}}</string>
 							<reference key="NSSuperview" ref="614583404"/>
-							<reference key="NSNextKeyView" ref="286166337"/>
 							<int key="NSsFlags">18</int>
 							<reference key="NSVScroller" ref="378259176"/>
 							<reference key="NSHScroller" ref="231947044"/>
@@ -2033,14 +2034,6 @@ AAAAAAAAAAAAAA</bytes>
 					<int key="connectionID">527</int>
 				</object>
 				<object class="IBConnectionRecord">
-					<object class="IBActionConnection" key="connection">
-						<string key="label">toggleExifPanel:</string>
-						<reference key="source" ref="1014"/>
-						<reference key="destination" ref="330203726"/>
-					</object>
-					<int key="connectionID">528</int>
-				</object>
-				<object class="IBConnectionRecord">
 					<object class="IBOutletConnection" key="connection">
 						<string key="label">delegate</string>
 						<reference key="source" ref="972006081"/>
@@ -2183,6 +2176,14 @@ AAAAAAAAAAAAAA</bytes>
 						<reference key="destination" ref="724894618"/>
 					</object>
 					<int key="connectionID">590</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBActionConnection" key="connection">
+						<string key="label">orderFront:</string>
+						<reference key="source" ref="248743978"/>
+						<reference key="destination" ref="330203726"/>
+					</object>
+					<int key="connectionID">593</int>
 				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -3364,7 +3365,7 @@ AAAAAAAAAAAAAA</bytes>
 					<reference ref="9"/>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<reference ref="9"/>
-					<string>{{405, 662}, {197, 73}}</string>
+					<string>{{423, 663}, {197, 73}}</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<reference ref="9"/>
 					<string>{{525, 802}, {197, 73}}</string>
@@ -3374,7 +3375,7 @@ AAAAAAAAAAAAAA</bytes>
 					<string>{74, 862}</string>
 					<string>{{11, 836}, {478, 20}}</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
-					<string>{{355, 672}, {234, 63}}</string>
+					<string>{{373, 673}, {234, 63}}</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>{{475, 832}, {234, 43}}</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -3414,7 +3415,7 @@ AAAAAAAAAAAAAA</bytes>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
-					<string>{{183, 620}, {616, 0}}</string>
+					<string>{{225, 672}, {616, 0}}</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -3429,10 +3430,10 @@ AAAAAAAAAAAAAA</bytes>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
-					<string>{{327, 173}, {276, 399}}</string>
+					<string>{{552, 191}, {276, 399}}</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
-					<string>{{327, 173}, {276, 399}}</string>
-					<reference ref="9"/>
+					<string>{{552, 191}, {276, 399}}</string>
+					<reference ref="8"/>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -3492,7 +3493,7 @@ AAAAAAAAAAAAAA</bytes>
 				</object>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">591</int>
+			<int key="maxID">593</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -3557,12 +3558,10 @@ AAAAAAAAAAAAAA</bytes>
 							<string>menuOpen:</string>
 							<string>removeSelected:</string>
 							<string>storeImageHierarchy:</string>
-							<string>toggleExifPanel:</string>
 							<string>ungroupSelected:</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<string>id</string>
 							<string>id</string>
 							<string>id</string>
 							<string>id</string>
